--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-service",
   "description": "",
   "version": "1.0.0",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
